--- a/Sample/Sample/Sample.csproj
+++ b/Sample/Sample/Sample.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Acr.Core" Version="2.0.2" />
         <PackageReference Include="Acr.XamForms" Version="3.0.1" />
         <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
         <PackageReference Include="Humanizer.Core" Version="2.4.2" />
