--- a/Sample/Sample/Sample.csproj
+++ b/Sample/Sample/Sample.csproj
@@ -5,13 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Acr.Core" Version="3.0.0" />
-        <PackageReference Include="Acr.XamForms" Version="4.0.0" />
+        <PackageReference Include="Acr.Core" Version="3.0.1" />
+        <PackageReference Include="Acr.XamForms" Version="4.0.1" />
         <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
-        <PackageReference Include="Humanizer.Core" Version="2.5.1" />
+        <PackageReference Include="Humanizer.Core" Version="2.5.16" />
         <PackageReference Include="Plugin.Notifications" Version="5.0.0-beta3" />
         <PackageReference Include="System.Reactive" Version="4.0.0" />
-        <PackageReference Include="Xamarin.Forms" Version="3.2.0.871581" />
+        <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     </ItemGroup>
 
     <ItemGroup>
