--- a/Sample/Sample.UWP/Sample.UWP.csproj
+++ b/Sample/Sample.UWP/Sample.UWP.csproj
@@ -144,6 +144,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>3.6.0.293080</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Plugin.HttpTransferTasks\Plugin.HttpTransferTasks.csproj">
