--- a/Sample/Sample/Sample.csproj
+++ b/Sample/Sample/Sample.csproj
@@ -7,11 +7,11 @@
     <ItemGroup>
         <PackageReference Include="Acr.Core" Version="3.0.1" />
         <PackageReference Include="Acr.XamForms" Version="4.0.1" />
-        <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
-        <PackageReference Include="Humanizer.Core" Version="2.5.16" />
+        <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
+        <PackageReference Include="Humanizer.Core" Version="2.6.2" />
         <PackageReference Include="Plugin.Notifications" Version="5.0.0-beta3" />
         <PackageReference Include="System.Reactive" Version="4.0.0" />
-        <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+        <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
     </ItemGroup>
 
     <ItemGroup>
