--- a/Sample/Sample/Sample.csproj
+++ b/Sample/Sample/Sample.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
         <PackageReference Include="Humanizer.Core" Version="2.6.2" />
         <PackageReference Include="Plugin.Notifications" Version="5.0.0-beta3" />
+        <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
         <PackageReference Include="System.Reactive" Version="4.0.0" />
         <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
     </ItemGroup>
